Fix photo on mobile devices

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -25,6 +25,6 @@ h1 {
   }
 
   .image {
-    width: 100%;
+    width: 8%;
   }
 }
